# censusdis

./: DEVELOPER.md  pyproject.toml
.github/workflows/: coverage-report.yml  deploy-pages.yml  generate-dataset.yml  lint.yml  nbmake.yml  test-matrix.yml  unit-test.yml
censusdis/: __init__.py  csa.py  data.py  datasets.py  division.py  geography.py  maps.py  msa_msa.py  multiyear.py  region.py  states.py
censusdis/cli/: cli.py  yamlspec.py
censusdis/counties/: alabama.py  alaska.py  arizona.py  arkansas.py  california.py  colorado.py  delaware.py  district_of_columbia.py  florida.py  georgia.py  hawaii.py  idaho.py  illinois.py  indiana.py  iowa.py  kansas.py  kentucky.py  louisiana.py  maine.py  maryland.py  massachusetts.py  michigan.py  minnesota.py  mississippi.py  missouri.py  montana.py  nebraska.py  nevada.py  new_hampshire.py  new_jersey.py  new_mexico.py  new_york.py  north_carolina.py  north_dakota.py  ohio.py  oklahoma.py  oregon.py  pennsylvania.py  puerto_rico.py  rhode_island.py  (+11 more)
censusdis/impl/: fetch.py  geometry.py  us_census_shapefiles.py  varcache.py
censusdis/places/: alabama.py  alaska.py  arizona.py  arkansas.py  california.py  colorado.py  connecticut.py  delaware.py  district_of_columbia.py  florida.py  georgia.py  hawaii.py  idaho.py  illinois.py  indiana.py  iowa.py  kansas.py  kentucky.py  louisiana.py  maine.py  maryland.py  massachusetts.py  michigan.py  minnesota.py  mississippi.py  missouri.py  montana.py  nebraska.py  nevada.py  new_hampshire.py  new_jersey.py  new_mexico.py  new_york.py  north_carolina.py  north_dakota.py  ohio.py  oklahoma.py  oregon.py  pennsylvania.py  puerto_rico.py  (+12 more)
notebooks/: ACS Comparison Profile.ipynb  ACS Data Profile.ipynb  ACS Demo.ipynb  ACS Multiyear Analyses.ipynb  ACS Subject Table.ipynb  All ZCTAs Many Fields.ipynb  Block Groups in CBSAs.ipynb  Blocks.ipynb  CT Counties Planning Districts.ipynb  DHC-A.ipynb  Data With Geometry.ipynb  Error Messages for Bad Arguments.ipynb  Geographies Contained within Geographies.ipynb  Getting Started Examples.ipynb  LODES Data.ipynb  MA Remove Water.ipynb  Map Geographies.ipynb  Nationwide Diversity and Integration.ipynb  PUMS Demo.ipynb  Population Change 2020-2021.ipynb  Querying Available Data Sets.ipynb  SoMa DIS Demo.ipynb  Time Series School District Poverty.ipynb  Voting Districts.ipynb
notebooks/datasets/: Small Area Income and Poverty (SAIPE) School Districts.ipynb
tests/: test_cert_verify.py  test_data.py  test_fetch.py  test_geo_integration.py  test_geography.py  test_geometry.py  test_integration.py  test_integration2.py  test_lodes.py  test_maps.py  test_multiyear.py  test_old_geos.py  test_plotspec.py  test_typing.py  test_varcache.py  test_varsource.py  test_version.py  test_yamlspec.py
utils/: counties.py  crs_bounds.py  places.py  scanshp.py  symbolic.py  top_geos.py
