[project]
name = "censusdis"
version = "1.4.2"
description = "US Census utilities for a variety of data loading, analysis, and mapping purposes."
license = "LicenseRef-HL3-CL-ECO-EXTR-FFD-LAW-MIL-SV"
license-files = ["LICENSE.md"]
authors = [{ name = "Darren Vengroff" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = ["census", "demographics"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research"
]
dependencies = [
    "divintseg>=0.7.0,<0.8.0",
    "logargparser>=0.1.1,<0.2.0",
    "geopandas==1.1.4",
    "pyarrow>=25.0.0,<26.0.0",  # Will become required when pandas hits 3.0.
    "Rtree>=1.0.0,<2.0.0",
    # Matplotlib 3.11 changes label rendering enough to break the map image contract.
    "matplotlib>=3.9.1,<3.11",
    "toml>=0.10.2,<0.11.0",
    "requests>=2.32.0,<3.0.0",
    "geopy>=2.2.0,<3.0.0",
    "adjustText>=0.8,<0.9",
    "Fiona>=1.10.0,<2.0.0",
    "contextily>=1.3.0,<2.0.0",
    "haversine>=2.8.0,<3.0.0",
    "PyYAML>=6.0,<7.0",
    "usingversion>=0.1.1,<0.2.0",
    "pyogrio>=0.10.0,<0.11.0",
    "rasterio>=1.3.10,<2.0.0",
    # Jinja2 is a recursive dependency along several paths. Make sure
    # we have a patched version that fixes a security issue raised by
    # dependabot. Once intermediate packages get this dependency upgrade
    # we can delete it here.
    "jinja2>=3.1.4",
    "numpy>=2.0.0,<3.0.0",
    # Deal with a certificate issue. See
    # https://uscensusbureau.slack.com/archives/CC7DYQ8PM/p1752773503093109
    "certifi==2025.01.31",
]

[project.optional-dependencies]
explore = [
    "mapclassify>=2.7.0,<3.0.0",
    "ipyleaflet>=0.19.0,<0.20.0",
    "folium>=0.17.0,<0.18.0",
]
docs = [
    "Sphinx>=6.1.3,<7.0.0",
    "sphinx-rtd-theme==2.0.0",
    "sphinx-copybutton>=0.5.1,<0.6.0",
    "sphinxcontrib-napoleon==0.7",
    "nbsphinx>=0.9.3,<0.10.0",
    "toml>=0.10.2,<0.11.0",
]
jupyterlab = [
    "jupyterlab>=4.2.3,<5.0.0",
    "ipywidgets>=8.1.3,<9.0.0",
]

[project.urls]
Repository = "https://github.com/vengroff/censusdis"

[project.scripts]
censusdis = "censusdis.cli.cli:main"

[tool.poetry]
requires-poetry = ">=2.4.1,<3.0.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.1.3,<10.0.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^3.0.0"
nbmake = "^1.3.5"
scikit-image = "^0.24.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.14"
flake8 = "^7.0.0"
black = {extras = ["jupyter"], version = "^26.5.1"}
isort = "^5.10.1"
pylint = "^2.15.2"
mypy = "^0.971"
types-requests = "^2.28.10"

[tool.poetry.group.dist.dependencies]
genbadge = {extras = ["all"], version = "^1.1.0"}


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"

[tool.coverage.report]
omit = ["tests/*"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.4.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
